tests/NormalTests/paczka1/fuzzy1/62254976.err
Error in line 2: gaeAj S111 10,2
Error in line 24: JRkzKPN9Fq3 S111 54,7
Error in line 25: gaeAj A69 224,5
Error in line 18: ZjXDF8P S111 142,6
Error in line 34: JRkzKPN9Fq3 S111 42,2
Error in line 26: CK2t21A A69 94,6
Error in line 32: ZjXDF8P S2 24,2
